fix: debug visible edit buttons, factored files / folders sub edit menu code for both document & character pages, update the relationship graph for only local view and not global

--- a/frontend/css/component_edit_mode.css
+++ b/frontend/css/component_edit_mode.css
@@ -9,6 +9,10 @@ EDIT MODE
     display: none;
 }
 
+body:not(.edit-mode) .edit-only {
+    display: none !important;
+}
+
 body.edit-mode .edit-only {
     display: inline-flex;
 }
